--- a/ColorGame/colorGame.html
+++ b/ColorGame/colorGame.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 <h1>The Great <span id="colorDisplay">RBG Color</span> Guessing Game</h1>
-	<div><span id="message"></span></div>
+	<div id="stripe">
+		<button id="resetButton">New Colors</button>
+		<span id="message"></span>
+	</div>
 	<div id="container">
 		<div class="square"></div>
 		<div class="square"></div>
