--- a/ColorGame/colorGame.html
+++ b/ColorGame/colorGame.html
@@ -9,6 +9,8 @@
 	<div id="stripe">
 		<button id="resetButton">New Colors</button>
 		<span id="message"></span>
+		<button id="easyButton">Easy</button>
+		<button id="hardButton">Hard</button>
 	</div>
 	<div id="container">
 		<div class="square"></div>
