added colored background to selected difficulty

--- a/ColorGame/colorGame.html
+++ b/ColorGame/colorGame.html
@@ -10,7 +10,7 @@
 		<button id="resetButton">New Colors</button>
 		<span id="message"></span>
 		<button id="easyButton">Easy</button>
-		<button id="hardButton">Hard</button>
+		<button id="hardButton" class="selected">Hard</button>
 	</div>
 	<div id="container">
 		<div class="square"></div>
