--- a/ColorGame/colorGame.html
+++ b/ColorGame/colorGame.html
@@ -5,7 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
 <body>
-<h1>The Great <span id="colorDisplay">RBG Color</span> Guessing Game</h1>
+<h1>The Great 
+<br>
+<span id="colorDisplay">RBG Color</span>
+<br>
+Guessing Game</h1>
 	<div id="stripe">
 		<button id="resetButton">New Colors</button>
 		<span id="message"></span>
