--- a/TodoList/index.html
+++ b/TodoList/index.html
@@ -2,18 +2,20 @@
 <html>
 <head>
 	<title>Todo List</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.2.1.min.js"></script>
+	<script src="https://use.fontawesome.com/aba108fdee.js"></script>
 </head>
 <body>
 <div id="container">
-	<h1>To-Do List</h1>
-	<input type="text">
+	<h1>To-Do List <i class="fa fa-plus-circle" aria-hidden="true"></i></h1>
+	<input type="text" placeholder="Add New Todo">
 
 	<ul>
-		<li><span>X</span> Go to Potions Class</li>
-		<li><span>X</span> Buy New Robes</li>
-		<li><span>X</span> Visit Hagrid</li>
+		<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Go to Potions Class</li>
+		<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Buy New Robes</li>
+		<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Visit Hagrid</li>
 	</ul>
 </div>
 <script type="text/javascript" src="assets/js/todos.js"></script>
