hide input for adding todo item by default; pressing the plus button reveals it

--- a/TodoList/index.html
+++ b/TodoList/index.html
@@ -13,9 +13,9 @@
 	<input type="text" placeholder="Add New Todo">
 
 	<ul>
-		<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Go to Potions Class</li>
-		<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Buy New Robes</li>
-		<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Visit Hagrid</li>
+		<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Example Todo 1</li>
+		<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Example Todo 2</li>
+		<li><span><i class="fa fa-trash" aria-hidden="true"></i></span> Example Todo 3</li>
 	</ul>
 </div>
 <script type="text/javascript" src="assets/js/todos.js"></script>
